src/tokenizer/snapshots/reconcile__tokenizer__word_tokenizer__tests__with_snapshots-4.snap
---
source: src/tokenizer/word_tokenizer.rs
expression: "word_tokenizer(\" hello, \\nwhere are you?\")"
snapshot_kind: text
---
[
    Token {
        normalized: " hello,",
        original: " ",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "hello,",
        original: "hello,",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: " \nwhere",
        original: " \n",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "where",
        original: "where",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: " are",
        original: " ",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "are",
        original: "are",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: " you?",
        original: " ",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "you?",
        original: "you?",
        is_left_joinable: true,
        is_right_joinable: true,
    },
]
