src/tokenizer/snapshots/reconcile__tokenizer__word_tokenizer__tests__with_snapshots-5.snap
---
source: reconcile/src/tokenizer/word_tokenizer.rs
expression: "word_tokenizer(\" hello, \\nwhere are you?\")"
snapshot_kind: text
---
[
    Token {
        normalised: " ",
        original: " ",
    },
    Token {
        normalised: "hello,",
        original: "hello,",
    },
    Token {
        normalised: " \n",
        original: " \n",
    },
    Token {
        normalised: "where",
        original: "where",
    },
    Token {
        normalised: " ",
        original: " ",
    },
    Token {
        normalised: "are",
        original: "are",
    },
    Token {
        normalised: " ",
        original: " ",
    },
    Token {
        normalised: "you?",
        original: "you?",
    },
]
